# uml-mcp

./: .coverage  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  mcp_server.py  mkdocs.yml  pyproject.toml  requirements.txt  simplified_mcp_server.py  smithery.yaml  vercel.json
.github/workflows/: build.yml  cd.yml  ci-cd.yml  ci.yml  publish.yml  test.yml
.well-known/: ai-plugin.json  plugin-manifest.json  privacy.txt
ai_uml/: README.md  requirements.txt
ai_uml/config/: diagram_config.json
ai_uml/image_generation/: README.md  generate_images.py
ai_uml/json_schemas/: diagram_schema.json
ai_uml/src/: main.py
docs/: configuration.md  examples.md  index.md  installation.md
docs/api/: tools.md
docs/diagrams/: uml.md
docs/integrations/: claude_desktop.md  cursor.md
kroki/: __init__.py  kroki.py  kroki_templates.py
mcp/: Dockerfile  __init__.py  install_to_cursor.py  mcp-requirements.txt
mcp/api/: __init__.py  docs_generator.py
mcp/core/: __init__.py  config.py  server.py  utils.py
mcp/prompts/: __init__.py  diagram_prompts.py
mcp/resources/: __init__.py  diagram_resources.py
mcp/server/: __init__.py  fastmcp_wrapper.py
mcp/tools/: __init__.py  diagram_tools.py  tool_decorator.py
mcp_core/: __init__.py
mcp_core/api/: docs_generator.py
mcp_core/core/: __init__.py  server.py
mcp_core/prompts/: __init__.py  diagram_prompts.py
mcp_core/resources/: __init__.py  diagram_resources.py
mcp_core/server/: __init__.py  (+1 more)
tests/: test_app.py  test_core_utils.py  test_diagram_tools.py  test_kroki.py
(+24 files in other folders)
